[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/enemies/enemy_base_3d.gd" id="1_rxjvs"]

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 0.5
height = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.223529, 0.85098, 0.317647, 1.0)
metallic = 0.0
roughness = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_2"]
radius = 5.0

[node name="SlimeEnemy3D" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_rxjvs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_2")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"] 